--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,300 @@
-<h1>Hello world!</h1>
+<div id="intro">
+		<div class="story">
+	    	<div class="float-left">
+			<h2 id="name">I'm Thomas.</h2>
+	        <p></p>
+	        </div>
+	    </div> <!--.story-->
+	</div> <!--#intro-->
+	
+	<div id="second">
+		
+		<div id="ss-container" class="ss-container">
+		    <div class="ss-row">
+                <div class="ss-left">
+                    <h2 id="1987"> </h2>
+                </div>
+                <div class="ss-right">
+                    <h2>1987</h2>
+                </div>
+            </div>
+	            
+	            <div class="ss-row ss-medium">
+	                <div class="ss-left">
+	                    <img class="ss-circle ss-circle-1" src="https://dl.dropboxusercontent.com/u/5753236/baby_img.png">
+	                </div>
+	                <div class="ss-right">
+	                    <h3>
+	                        <span>October 29, 1987</span>
+	                        <p>A child was born.</p>
+	                    </h3>
+	                </div>
+	            </div>
+			
+			<div class="ss-row">
+                <div class="ss-left">
+                    <h2 id="2006">2006</h2>
+                </div>
+            </div>
+				
+				<div class="ss-row ss-small">
+	                <div class="ss-left">
+	                    <h3>
+	                        <span>June 30, 2006</span>
+	                        <p>Graduated from highschool</p>
+	                        <span>2003 - 2006</span>
+	                    </h3>
+	                </div>
+	                <div class="ss-right">
+						<a href="http://tympanus.net/Development/FullscreenImage3DEffect/" class="ss-circle ss-circle-8"></a>
+	                </div>
+	            </div>
+
+	            <div class="ss-row ss-large">
+	                <div class="ss-left">
+	                    <a href="http://tympanus.net/Development/FullscreenImage3DEffect/" class="ss-circle ss-circle-8"></a>
+	                </div>
+	                <div class="ss-right">
+						<h3>
+	                        <span>September 24, 2006</span>
+	                        <p>Started my BS degree in Electronic Engineering</p>
+	                        <span>2006 - 2010</span>
+	                    </h3>
+	                </div>
+	            </div>
+				
+			<div class="ss-row">
+                <div class="ss-left">
+                    <h2 id="2009"> </h2>
+                </div>
+                <div class="ss-right">
+                    <h2>2009</h2>
+                </div>
+            </div>
+				
+				<div class="ss-row ss-small">
+	                <div class="ss-left">
+	                    <h3>
+	                        <span>July 17, 2009</span>
+	                        <p>Finish my MIS intern @ Formosa Plastic Group.</p>
+	                        <span>2008 - 2009</span>
+	                    </h3>
+	                </div>
+	                <div class="ss-right">
+						<a href="http://tympanus.net/Tutorials/ScrollbarVisibility/" class="ss-circle ss-circle-15"></a>
+	                </div>
+	            </div>
+
+	            <div class="ss-row ss-large">
+	                <div class="ss-left">
+	                    <a href="http://tympanus.net/Development/FullscreenImage3DEffect/" class="ss-circle ss-circle-8"></a>
+	                </div>
+	                <div class="ss-right">
+						<h3>
+	                        <span>August 24, 2006</span>
+	                        <p>Loss 30kg of weight! <i>(So long, fatty!)</i></p>
+	                        <span style="color:#FF0000;"><b>From 99kg -> 69kg</b></span>
+	                        <span>Incrediblly, after 7 months' extensive exercise (10km of running per day) &amp; diet, I've made it!</span>
+	                    </h3>
+	                </div>
+	            </div>
+				
+			<div class="ss-row">
+                <div class="ss-left">
+                    <h2 id="2010">2010</h2>
+                </div>
+                <div class="ss-right">
+                </div>
+            </div>
+				
+				<div class="ss-row ss-large">
+	                <div class="ss-left">
+						<h3>
+	                        <span>June 1, 2010</span>
+	                        <p>Graduation!</p>
+	                        <span>2006 - 2010</span>
+	                        <p>I graduated from Mingchi University of Technology in Electronic Engineering with GPA 3.35.</p>
+	                    </h3>
+	                </div>
+	                <div class="ss-right">
+						<a href="http://tympanus.net/Development/AutomaticImageMontage/" class="ss-circle ss-circle-20"></a>
+	                </div>
+	            </div>
+
+				<div class="ss-row ss-medium">
+	                <div class="ss-left">
+	                    <a href="http://tympanus.net/Development/ImageZoomTour/" class="ss-circle ss-circle-21"></a>
+	                </div>
+	                <div class="ss-right">
+	                    <h3>
+	                        <span>August 20, 2010</span>
+	                        <p>First employment!</p>
+	                        <p>Got my first job @ Corel as a software QA after finishing my undergrad.</p>
+	                    </h3>
+	                </div>
+	            </div>
+
+				<div class="ss-row ss-small">
+	                <div class="ss-left">
+						<h3>
+	                        <span>November 1, 2010</span>
+	                        <p>The start of my military life.</p>
+	                        <span>2010 - 2011</span>
+	                        <p>I was called to fulfill my military service duty. Definitely not the best part of my life, but the most stressful one.</p>
+	                    </h3>
+	                </div>
+	                <div class="ss-right">
+						<a href="#" class="ss-circle ss-circle-22"></a>
+	                </div>
+	            </div>
+
+			<div class="ss-row">
+                <div class="ss-left">
+                    <h2 id="2011"> </h2>
+                </div>
+                <div class="ss-right">
+                    <h2>2011</h2>
+                </div>
+            </div>
+				
+				<div class="ss-row ss-small">
+	                <div class="ss-left">
+	                    <a href="http://tympanus.net/Development/ContentRotator/example1.html" class="ss-circle ss-circle-25"></a>
+	                </div>
+	                <div class="ss-right">
+	                    <h3>
+	                        <span>November 1, 2011</span>
+	                        <p>Leaving the military!</p>
+	                    </h3>
+	                </div>
+	            </div>
+				
+				<div class="ss-row ss-large">
+	                <div class="ss-left">
+						<h3>
+	                        <span>December 1, 2011</span>
+	                        <p>Back to my life, and Corel.</p>
+	                    </h3>
+	                </div>
+	                <div class="ss-right">
+						<a href="http://tympanus.net/Development/VerticalSlidingAccordion/example1.html" class="ss-circle ss-circle-26"></a>
+	                </div>
+	            </div>
+
+			<div class="ss-row">
+                <div class="ss-left">
+                    <h2 id="2012">2012</h2>
+                </div>
+                <div class="ss-right">
+                </div>
+            </div>
+				
+				<div class="ss-row ss-small">
+	                <div class="ss-left">
+	                   <h3>
+	                        <span>April 1, 2012</span>
+	                        <p>Leaving my job and my home country, and ready to move on.</p>
+	                    </h3>
+	                </div>
+	                <div class="ss-right">
+						<a href="http://tympanus.net/Development/GridNavigationEffects/example5.html" class="ss-circle ss-circle-29"></a>
+	                </div>
+	            </div>
+
+	            <div class="ss-row ss-large">
+	                <div class="ss-left">
+	                   <a href="http://tympanus.net/Development/GridNavigationEffects/example5.html" class="ss-circle ss-circle-29">Grid Navigation Effects with jQuery</a>
+	                </div>
+	                <div class="ss-right">
+						<h3>
+	                        <span>September 16, 2012</span>
+	                        <p>Started my MSc degree @ The Universuty of Sheffield.</p>
+	                    </h3>
+	                </div>
+	            </div>
+
+	        <div class="ss-row">
+                <div class="ss-left">
+                    <h2 id="2013"> </h2>
+                </div>
+                <div class="ss-right">
+                	<h2 id="2013">2013</h2>
+                </div>
+            </div>
+
+            	<div class="ss-row ss-small">
+	                <div class="ss-left">
+	                   <h3>
+	                        <span>April 12, 2013</span>
+	                        <p>Let's hack @ Startup Hacks Manchester</p>
+	                        <span>April 12 - 14</span>
+	                    </h3>
+	                </div>
+	                <div class="ss-right">
+						<a href="http://tympanus.net/Development/GridNavigationEffects/example5.html" class="ss-circle ss-circle-29"></a>
+	                </div>
+	            </div>
+
+	            <div class="ss-row ss-large">
+	                <div class="ss-left">
+	                   <a href="http://tympanus.net/Development/GridNavigationEffects/example5.html" class="ss-circle ss-circle-29">Grid Navigation Effects with jQuery</a>
+	                </div>
+	                <div class="ss-right">
+						<h3>
+	                        <span>July 12, 2013</span>
+	                        <p>Startup Weekend!</p>
+	                        <span>July 12 - 14</span>
+	                    </h3>
+	                </div>
+	            </div>
+
+	            <div class="ss-row ss-small">
+	                <div class="ss-left">
+	                   <h3>
+	                        <span>November 1, 2013</span>
+	                        <p>Startup Hacks London!</p>
+	                        <span>November 1 - 3</span>
+	                        <p>Seekr</p>
+	                    </h3>
+	                </div>
+	                <div class="ss-right">
+						<a href="http://tympanus.net/Development/GridNavigationEffects/example5.html" class="ss-circle ss-circle-29"></a>
+	                </div>
+	            </div>
+
+		</div>
+	</div> <!--#second-->
+	
+	<div id="third">
+		<div class="story">
+	    	<div class="float-left">
+	        	<h2></h2>
+	            <p></p>
+	        </div>
+	    </div> <!--.story-->
+	</div> <!--#third-->
+	
+	<div id="third">
+		<div class="story">
+	    	<div class="float-left">
+	        	<h2></h2>
+	            <p></p>
+	        </div>
+	    </div> <!--.story-->
+	</div> <!--#third-->
+
+	<div id="fifth">
+		<div class="story">
+	        
+	        <h2></h2>
+	        <ul>
+	            <li><strong>Twitter</strong>: <a href="http://www.twitter.com/ithomaslin" title="Follow me on Twitter">@ithomaslin</a></li>
+	            <li><strong>GitHub</strong>: <a href="http://www.github.com/ithomaslin" title="Follow me on GitHub">ithomaslin</a></li>
+	            <li><strong>LinkedIn</strong>: <a href="http://www.linkedin.com/in/ithomaslin" title="My LinkedIn page">http://www.linkedin.com/in/ithomaslin</a></li>
+	        </ul>
+	        
+	    </div> <!--.story-->
+	</div> <!--#fifth-->
+	<script type="text/javascript">
+	$('a').tooltip();
+	</script>
