Added face plugin and some modifications

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,10 +1,12 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:400,700);
 
-$body-bg: #272822;
+$body-bg: #ffffff;
 $font-family-sans-serif: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$navbar-height: 45px;
-$navbar-default-bg: white;
+$navbar-height: 50px;
+$navbar-default-bg: #16a085;
 $navbar-default-brand-color: #c0392b;
+$navbar-default-link-color: #34495e;
+$navbar-default-link-hover-color: #e74c3c;
 $brand-primary: #c0392b;
 $jumbotron-bg: white;
 
