--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,24 @@
-<div id="intro">
+
+	<div id="intro">
 		<div class="story">
 	    	<div class="float-left">
-			<h2 id="name">I'm Thomas.</h2>
-	        <p></p>
+				<h2 id="name">Hi! I'm Thomas,</h2>
+		        <p>a very proactive and hardworking individual with a great passion towards the fast-evolving IT industry and thorough interest towards the ever mind-blowing entrepreneurial world.</p><p>The vision of my life is to make a change in the world by building my life around my passion.</p>
 	        </div>
+	        <div id="head"></div>
 	    </div> <!--.story-->
 	</div> <!--#intro-->
+	<script type="text/javascript">
+		var positionFromLeft = 87;
+		var positionFromTop = 240;
+		var eyeSize = 60;
+		var appendEyetoDivNamed = 'head';
+		new alienEye(positionFromLeft,positionFromTop,eyeSize,appendEyetoDivNamed);
+
+		var positionFromLeft1 = 138;
+		var positionFromTop1 = 240;
+		new alienEye(positionFromLeft1,positionFromTop1,eyeSize,appendEyetoDivNamed);
+	</script>
 	
 	<div id="second">
 		
@@ -21,7 +34,7 @@
 	            
 	            <div class="ss-row ss-medium">
 	                <div class="ss-left">
-	                    <img class="ss-circle ss-circle-1" src="https://dl.dropboxusercontent.com/u/5753236/baby_img.png">
+	                    <a href="#" class="ss-circle ss-circle-1" target="_blank"></a>
 	                </div>
 	                <div class="ss-right">
 	                    <h3>
@@ -45,14 +58,11 @@
 	                        <span>2003 - 2006</span>
 	                    </h3>
 	                </div>
-	                <div class="ss-right">
-						<a href="http://tympanus.net/Development/FullscreenImage3DEffect/" class="ss-circle ss-circle-8"></a>
-	                </div>
 	            </div>
 
 	            <div class="ss-row ss-large">
 	                <div class="ss-left">
-	                    <a href="http://tympanus.net/Development/FullscreenImage3DEffect/" class="ss-circle ss-circle-8"></a>
+	                    <a href="http://tympanus.net/Development/FullscreenImage3DEffect/" class="ss-circle ss-circle-3" target="_blank"></a>
 	                </div>
 	                <div class="ss-right">
 						<h3>
@@ -81,21 +91,34 @@
 	                    </h3>
 	                </div>
 	                <div class="ss-right">
-						<a href="http://tympanus.net/Tutorials/ScrollbarVisibility/" class="ss-circle ss-circle-15"></a>
+						<a href="http://tympanus.net/Tutorials/ScrollbarVisibility/" class="ss-circle ss-circle-4" target="_blank"></a>
 	                </div>
 	            </div>
 
 	            <div class="ss-row ss-large">
 	                <div class="ss-left">
-	                    <a href="http://tympanus.net/Development/FullscreenImage3DEffect/" class="ss-circle ss-circle-8"></a>
+	                    <a href="http://tympanus.net/Development/FullscreenImage3DEffect/" class="ss-circle ss-circle-5" target="_blank"></a>
 	                </div>
 	                <div class="ss-right">
 						<h3>
 	                        <span>August 24, 2006</span>
 	                        <p>Loss 30kg of weight! <i>(So long, fatty!)</i></p>
 	                        <span style="color:#FF0000;"><b>From 99kg -> 69kg</b></span>
-	                        <span>Incrediblly, after 7 months' extensive exercise (10km of running per day) &amp; diet, I've made it!</span>
+	                        <span>Incrediblly, after 7 months' extensive exercise (10km of running per day) &amp; diet, I made it!</span>
 	                    </h3>
+	                </div>
+	            </div>
+
+	            <div class="ss-row ss-small">
+	                <div class="ss-left">
+	                    <h3>
+	                        <span>October, 2009</span>
+	                        <p>First Girlfriend. (YES!)</p>
+	                        <span></span>
+	                    </h3>
+	                </div>
+	                <div class="ss-right">
+						<a href="http://tympanus.net/Tutorials/ScrollbarVisibility/" class="ss-circle ss-circle-6" target="_blank"></a>
 	                </div>
 	            </div>
 				
@@ -113,23 +136,23 @@
 	                        <span>June 1, 2010</span>
 	                        <p>Graduation!</p>
 	                        <span>2006 - 2010</span>
-	                        <p>I graduated from Mingchi University of Technology in Electronic Engineering with GPA 3.35.</p>
+	                        <span>I graduated from Mingchi University of Technology in Electronic Engineering with GPA 3.35.</span>
 	                    </h3>
 	                </div>
 	                <div class="ss-right">
-						<a href="http://tympanus.net/Development/AutomaticImageMontage/" class="ss-circle ss-circle-20"></a>
+						<a href="" class="ss-circle ss-circle-7" target="_blank"></a>
 	                </div>
 	            </div>
 
 				<div class="ss-row ss-medium">
 	                <div class="ss-left">
-	                    <a href="http://tympanus.net/Development/ImageZoomTour/" class="ss-circle ss-circle-21"></a>
+	                    <a href="" class="ss-circle ss-circle-8" target="_blank"></a>
 	                </div>
 	                <div class="ss-right">
 	                    <h3>
 	                        <span>August 20, 2010</span>
 	                        <p>First employment!</p>
-	                        <p>Got my first job @ Corel as a software QA after finishing my undergrad.</p>
+	                        <span>Got my first job @ Corel as a software QA after finishing my undergrad.</span>
 	                    </h3>
 	                </div>
 	            </div>
@@ -140,11 +163,11 @@
 	                        <span>November 1, 2010</span>
 	                        <p>The start of my military life.</p>
 	                        <span>2010 - 2011</span>
-	                        <p>I was called to fulfill my military service duty. Definitely not the best part of my life, but the most stressful one.</p>
+	                        <span>I was called to fulfill my military service duty. Definitely not the best part of my life, but the most stressful one.</span>
 	                    </h3>
 	                </div>
 	                <div class="ss-right">
-						<a href="#" class="ss-circle ss-circle-22"></a>
+						<a href="#" class="ss-circle ss-circle-9" target="_blank"></a>
 	                </div>
 	            </div>
 
@@ -159,7 +182,7 @@
 				
 				<div class="ss-row ss-small">
 	                <div class="ss-left">
-	                    <a href="http://tympanus.net/Development/ContentRotator/example1.html" class="ss-circle ss-circle-25"></a>
+	                    <a href="" class="ss-circle ss-circle-10" target="_blank"></a>
 	                </div>
 	                <div class="ss-right">
 	                    <h3>
@@ -173,11 +196,11 @@
 	                <div class="ss-left">
 						<h3>
 	                        <span>December 1, 2011</span>
-	                        <p>Back to my life, and Corel.</p>
+	                        <p></p>
 	                    </h3>
 	                </div>
 	                <div class="ss-right">
-						<a href="http://tympanus.net/Development/VerticalSlidingAccordion/example1.html" class="ss-circle ss-circle-26"></a>
+						<a href="" class="ss-circle ss-circle-11" target="_blank"></a>
 	                </div>
 	            </div>
 
@@ -192,23 +215,25 @@
 				<div class="ss-row ss-small">
 	                <div class="ss-left">
 	                   <h3>
-	                        <span>April 1, 2012</span>
-	                        <p>Leaving my job and my home country, and ready to move on.</p>
+	                        <span>July 20, 2012</span>
+	                        <p>Leaving my home country, heading for UK.</p>
+	                        <span></span>
 	                    </h3>
 	                </div>
 	                <div class="ss-right">
-						<a href="http://tympanus.net/Development/GridNavigationEffects/example5.html" class="ss-circle ss-circle-29"></a>
+						<a href="" class="ss-circle ss-circle-12" target="_blank"></a>
 	                </div>
 	            </div>
 
 	            <div class="ss-row ss-large">
 	                <div class="ss-left">
-	                   <a href="http://tympanus.net/Development/GridNavigationEffects/example5.html" class="ss-circle ss-circle-29">Grid Navigation Effects with jQuery</a>
+	                   <a href="" class="ss-circle ss-circle-13" target="_blank"></a>
 	                </div>
 	                <div class="ss-right">
 						<h3>
-	                        <span>September 16, 2012</span>
-	                        <p>Started my MSc degree @ The Universuty of Sheffield.</p>
+	                        <span>July 21, 2012</span>
+	                        <p>Started my MSc Degree.</p>
+	                        <span>I started my Leadership &amp; Management program @ the University of Sheffield in UK.</span>
 	                    </h3>
 	                </div>
 	            </div>
@@ -228,22 +253,24 @@
 	                        <span>April 12, 2013</span>
 	                        <p>Let's hack @ Startup Hacks Manchester</p>
 	                        <span>April 12 - 14</span>
+	                        <span>My very first time in hackathon, intensive 54 hours of work towards one goal and one goal only, to accomplish something that is valuable and to learn. Winning is important though, but somehow it's not that important.</span>
 	                    </h3>
 	                </div>
 	                <div class="ss-right">
-						<a href="http://tympanus.net/Development/GridNavigationEffects/example5.html" class="ss-circle ss-circle-29"></a>
+						<a href="http://www.youtube.com/watch?v=kkxGprUVOiE" class="ss-circle ss-circle-14" target="_blank"></a>
 	                </div>
 	            </div>
 
 	            <div class="ss-row ss-large">
 	                <div class="ss-left">
-	                   <a href="http://tympanus.net/Development/GridNavigationEffects/example5.html" class="ss-circle ss-circle-29">Grid Navigation Effects with jQuery</a>
+	                   <a href="http://tympanus.net/Development/GridNavigationEffects/example5.html" class="ss-circle ss-circle-15" target="_blank"></a>
 	                </div>
 	                <div class="ss-right">
 						<h3>
 	                        <span>July 12, 2013</span>
 	                        <p>Startup Weekend!</p>
 	                        <span>July 12 - 14</span>
+	                        <span>Throughout 36 hours of non-sleep hacking, a mobile app named Scanup was created. The idea was to replace the traditional loyalty card with mobile app which makes people's life easier.</span>
 	                    </h3>
 	                </div>
 	            </div>
@@ -252,13 +279,14 @@
 	                <div class="ss-left">
 	                   <h3>
 	                        <span>November 1, 2013</span>
-	                        <p>Startup Hacks London!</p>
+	                        <a href="http://www.youtube.com/watch?v=guI4G3ofaO8" class="link-glow">Startup Hacks London!</a>
 	                        <span>November 1 - 3</span>
-	                        <p>Seekr</p>
+	                        <a href="http://getseekr.com" class="link-glow">Seekr</a>
+	                        <span>a map based event discovery app, using server side clustering and matching to detect and classify events of any size based on a realtime feed of social media from various sources. The map was populated from data gathered from Twitter, Instagram, Flickr as well as a photo capture interface in the app.</span>
 	                    </h3>
 	                </div>
-	                <div class="ss-right">
-						<a href="http://tympanus.net/Development/GridNavigationEffects/example5.html" class="ss-circle ss-circle-29"></a>
+	                <div class="ss-right link-glow">
+						<a href="http://getseekr.com" class="ss-circle ss-circle-16" target="_blank"></a>
 	                </div>
 	            </div>
 
@@ -268,13 +296,13 @@
 	<div id="third">
 		<div class="story">
 	    	<div class="float-left">
-	        	<h2></h2>
-	            <p></p>
+	        	<h2 id="thirdTitle">Sample text</h2>
+	            <p>This is the sample paragraph.</p>
 	        </div>
 	    </div> <!--.story-->
 	</div> <!--#third-->
 	
-	<div id="third">
+	<div id="fourth">
 		<div class="story">
 	    	<div class="float-left">
 	        	<h2></h2>
@@ -295,6 +323,7 @@
 	        
 	    </div> <!--.story-->
 	</div> <!--#fifth-->
+
 	<script type="text/javascript">
 	$('a').tooltip();
 	</script>
